syntax = "proto3";

package address;

service AddressVerifier {
  rpc VerifyAddress (AddressRequest) returns (AddressResponse);
}

message AddressRequest {
  string address = 1;
}

message AddressResponse {
  bool is_valid = 1;
  string normalized_address = 2;
} 